--- a/project1.html
+++ b/project1.html
@@ -252,8 +252,8 @@
 
 <footer class="flex bg-blue-dark h-auto pb-4">
 <!-- wrapper -->
-    <div class="container mx-auto mt-6 text-center text-white text-xs">
-      <div class="flex mb-6 text-left text-xs text-white leading-normal">
+    <div class="container mx-auto mt-6 text-center text-white text-lg">
+      <div class="flex mb-6 text-left text-lg text-white leading-normal">
         <!-- left -->
           <div class="w-1/3 h-auto">
             <ul class="list-reset">
